# tabulus

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  redactor_gap.yml
.github/workflows/: ci.yml  publish.yml
demo/: README.md  record.sh  seed.sql
src/tabulus/: __init__.py  cli.py  config.py  db.py  redactor.py  safety.py  server.py
src/vigil/: __init__.py  cli.py  config.py  db.py  redactor.py  safety.py  server.py
tests/: test_redactor.py  test_safety.py
