[project]
name = "vigilmcp"
version = "0.0.1"
description = "Postgres MCP server — agent-first database workbench"
authors = [{name = "WalkingMountain"}]
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
keywords = ["postgres", "mcp", "claude", "cursor", "database", "agent", "sql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "mcp>=1.0.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
vigil = "vigil.cli:main"

[project.urls]
Repository = "https://github.com/WalkingMountain/vigil"
Issues = "https://github.com/WalkingMountain/vigil/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vigil"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
